# iridium

./: Cargo.toml  README.md
src/: cli.yml  instructions.rs  main.rs  vm.rs
src/assembler/: assembler_errors.rs  directive_parser.rs  instruction_parser.rs  label_parsers.rs  mod.rs  opcode_parser.rs  operand_parser.rs  program_parser.rs  register_parsers.rs  symbols.rs
src/repl/: mod.rs
