[package]
name = "iridium"
version = "0.1.0"
authors = ["Matthew Butler <butler.matthew@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^5.0"
clap = { version = "^2.33", features = ["yaml"] }
log = "0.4.11"
env_logger = "0.7.1"
byteorder = "1.3.4"